--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <p style="font-weight:bold;">留言区:  (现共有<span id="impression_num"></span>条用户留言)</p></B>
 
 <!--------------- 留言区开始 新的留言请放在最上面--------------------->
+<p class="impression" style="color: blue; font-weight: bold;"> 不知道去上班可以做点什么，紧张</p>
 
 <p class ="impression"style ="color：blue;font-weight：bold;">有收获，嘻嘻！</p>
 <p class ="impression"style ="color：blue;font-weight：bold;">170725 董航航最帅</p>
@@ -60,6 +61,7 @@
 <p class="impression" style="color:red;font-size: 60px;font-weight:bold;">0725javaEE班前来贺电！！！</p>
 <p class ="impression" style="color:blue;font-weight: bold:">老师 Git听不懂呀  一脸懵逼</p>
 <p class="impression" style="color:red" >我搬来了小板凳,请开始你们的表演~ --Java0725</p>
+
 <p class="impression" style="color:red；font-size: 50px;font-weight: bold;">轻轻的我走了，正如我轻轻的来～</p>
 <p class ="impression"style ="color：blue;font-weight：bold;">愿你随手拿起的一个苹果都很甜</p>
 <p class ="impression"style ="color：red;font-weight：bold;">黎明前最黑暗的时候</p>
@@ -131,7 +133,7 @@
 <p class="impression" style="color:red" >我的为什么看不到，踢我上去</p>
 <p class="impression" style="color:red" >天王盖地虎，小鸡炖蘑菇</p>
 <p class="impression" style="color:red" >打个酱油试一下</p> 
-<p class="impression" style="color:red" >有趣的灵魂越来越少</p> 
+<p class="impression" style="color:red" >有趣的灵魂越来越少</p>
 <p class="impression" style="color:red" >张老师与你同在0525</p> 
 <p class="impression" style="color:red" >完犊子，放个假一点儿状态么有了</p> 
 <p class="impression" style="color:red" >静静等着脑白金分裂出来第八个人格:-)</p>
